# zigzag

./: CHANGELOG.md  zigzag.cabal
.github/workflows/: build.yaml
src/Data/Word/: Zigzag.hs
test/: Main.hs
