cabal-version:   3.0
name:            zigzag
version:         0.1.0.0
synopsis:        Zigzag encoding of integers into unsigned integers.
description:
  Zigzag encoding is usually a precursor to a varint encoding such as LEB128.
  It has the advantage that numbers nearer zero are represented with only the lower-order bits set.

category:        Data
homepage:        https://github.com/byteverse/zigzag
bug-reports:     https://github.com/byteverse/zigzag/issues
author:          Eric Demko
maintainer:      amartin@layer3com.com
copyright:       2022 Eric Demko
license:         BSD-3-Clause
license-file:    LICENSE
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:     GHC ==9.4.8 || ==9.6.3 || ==9.8.1

common build-settings
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages

library
  import:          build-settings
  hs-source-dirs:  src
  exposed-modules: Data.Word.Zigzag
  build-depends:   base >=4.11.1 && <5
  ghc-options:     -O2

test-suite test
  import:         build-settings
  hs-source-dirs: test
  main-is:        Main.hs
  type:           exitcode-stdio-1.0
  build-depends:
    , base
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , zigzag

source-repository head
  type:     git
  location: git://github.com/byteverse/zigzag.git
